# ChangeLog for sys-apps/calculate-install
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Change lib version depend.

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Fix git path.

*calculate-install-9999 (19 Apr 2010)

  19 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-9999.ebuild, +metadata.xml:
  Add live ebuild.
