@@ -1,3 +1,3 @@
-EBUILD calculate-install-2.2.9999.ebuild 541 RMD160 0786dad3e8a40b619167fbfff0dd82b368541c6e SHA1 3a0b04ab146e3351ebf072f5818070e422a5714a SHA256 a75ea5b28a57d319f13a5a9bdc71ddc779447b88ba93df1bc3551850f62768c9
-MISC ChangeLog 536 RMD160 ac4914bccecfed24d8a2ad2ac8663c83e837848e SHA1 d002f7f411f6d480682a9fe15af6271ba0303f89 SHA256 018c5e1fff06ca6d364fe5f1fca09dbde1e80a99f3622cf512a68c14ad8b2227
+EBUILD calculate-install-2.2.9999.ebuild 753 RMD160 7a8672ebcf2507d3f6a74872008323d9e56cecfd SHA1 5e0eb0ca72039d27f18de74c22b412a4c1b4fb04 SHA256 3b628024b50502d2a76a017f712a88949ba89da3aa3a8dfb1f1774eae4123870
+MISC ChangeLog 680 RMD160 5f402d1ae91681fbf9500d9fe52d3a0219ee053b SHA1 7f8de6f83e7f7ef4d6873fb7606e93f2f6ff35e9 SHA256 68d845ac4df883344e0031b45d9970fc390b52f4238f8c4bb39562ec5fdaff37
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
