@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-install-2.2.9999.ebuild:
+  Add starting calcualte to default runlevel.
+
   22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-install-2.2.9999.ebuild:
   Change lib version depend.
